<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.plasticene.boot</groupId>
    <artifactId>plasticene-boot-starter-parent</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>
    <modules>
        <module>plasticene-common</module>
        <module>plasticene-boot-starter-mybatis</module>
        <module>plasticene-boot-starter-web</module>
        <module>plasticene-boot-starter-banner</module>
        <module>plasticene-boot-starter-redis</module>
        <module>plasticene-boot-starter-cache</module>
        <module>plasticene-boot-starter-license</module>
        <module>plasticene-boot-starter-oss</module>
        <module>plasticene-boot-starter-data-scope</module>
        <module>plasticene-boot-starter-excel</module>
        <module>plasticene-boot-example</module>
    </modules>

    <properties>

        <!-- project revision -->
        <revision>2025.3.0</revision>

        <!--  依赖尽量采用最新稳定原则     -->
        <!-- spring boot 依赖版本(当前最新稳定版本) -->
        <spring.boot.version>3.4.5</spring.boot.version>
        <!-- Spring Cloud版本 从官网可知boot3.4.x对应cloud为2024版本  -->
        <spring.cloud.version>2024.0.0</spring.cloud.version>
        <!-- Spring Cloud Alibaba 2023.0.3.2(当前最新版本) 对应的是Spring cloud是2023.0.3，但这里引入的cloud版本2024.0，
             因为boot版本3.4.x要求cloud是2024，否则项目启动报错版本问题。这里不需要担心alibaba版本和cloud版本
             不对应会有问题，因为从官网spring cloud从2023.0.3到2024.0.0没啥重大调整，就是些依赖包版本升级、细节调整而已
         -->
        <spring.cloud.alibaba.version>2023.0.3.2</spring.cloud.alibaba.version>
        <!-- java -->
        <java.version>17</java.version>

        <!-- mybatis-plus 依赖版本 -->
        <mybatis-plus.version>3.5.12</mybatis-plus.version>
        <!--screw 版本 生成数据库文档  -->
        <screw.version>1.0.5</screw.version>
        <!-- druid 依赖版本 -->
        <druid.version>1.2.8</druid.version>

        <!-- knife4j 依赖版本 -->
        <knife4j.version>4.5.0</knife4j.version>
        <!-- ttl 解决线程池 多线程之间父子线程上下文传递  -->
        <transmittable-thread-local.version>2.14.5</transmittable-thread-local.version>
        <!-- redisson 基于 Netty 框架的高性能异步且无锁的 Redis 和 Valkey Java 客户端。   -->
        <redisson.version>3.49.0</redisson.version>
        <!-- 高性能的本地缓存  -->
        <caffeine.version>3.2.1</caffeine.version>

        <!-- License -->
        <truelicense.version>1.33</truelicense.version>
        <!-- fastjson-->
        <fastjson.version>1.2.83</fastjson.version>
        <!-- apache commons -->
        <commons.lang.version>3.18.0</commons.lang.version>
        <!-- hutool工具包 -->
        <hutool.version>5.8.24</hutool.version>
        <!-- 编码解码器 如base64 -->
        <codec.version>1.13</codec.version>
        <jetbrains.anno.version>24.0.1</jetbrains.anno.version>

        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>




    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <!-- 统一依赖版本管理 -->
    <dependencyManagement>
        <dependencies>
            <!-- spring boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- spring cloud -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- spring cloud alibaba -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring.cloud.alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.plasticene.boot</groupId>
                <artifactId>plasticene-common</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.plasticene.boot</groupId>
                <artifactId>plasticene-boot-starter-banner</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.plasticene.boot</groupId>
                <artifactId>plasticene-boot-starter-license</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.plasticene.boot</groupId>
                <artifactId>plasticene-boot-starter-web</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.plasticene.boot</groupId>
                <artifactId>plasticene-boot-starter-redis</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.plasticene.boot</groupId>
                <artifactId>plasticene-boot-starter-cache</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.plasticene.boot</groupId>
                <artifactId>plasticene-boot-starter-mybatis</artifactId>
                <version>${revision}</version>
            </dependency>

            <!-- mybatis-plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-bom</artifactId>
                <version>${mybatis-plus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>



            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>


            <!-- knife4j api文档 -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>

            <!-- 解决 ThreadLocal 父子线程的传值问题 -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>transmittable-thread-local</artifactId>
                <version>${transmittable-thread-local.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-redis</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson</artifactId>
                <version>${redisson.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffeine.version}</version>
            </dependency>

            <!-- License -->
            <dependency>
                <groupId>de.schlichtherle.truelicense</groupId>
                <artifactId>truelicense-core</artifactId>
                <version>${truelicense.version}</version>
            </dependency>

            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>

            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${codec.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons.lang.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>${jetbrains.anno.version}</version>
            </dependency>

            <!-- 生成数据库文档  -->
            <dependency>
                <groupId>cn.smallbun.screw</groupId>
                <artifactId>screw-core</artifactId>
                <version>${screw.version}</version>
            </dependency>




        </dependencies>
    </dependencyManagement>





</project>